--- a/DACAinteractive.css
+++ b/DACAinteractive.css
@@ -1,48 +1,43 @@
 .title {
-	height: 35%;
+	height: 75px;
 	text-align: center;
 	padding-top: 15px;
 }
-.slideshow {
-	background-color: #306469;
-	height: 25%;
-	color: white;
-}
 #daca {
-	background-color: #A08260;
+	background-color: #FF9B42;
 	color: white;
-	font-weight: 5px;
+	font-family: 'Oswald', sans-serif;
+	font-size: 350px;
 }
 /*#chart {*/
 	/*background-color: #8EA4FF;*/
 	/*height: 300px;*/
 	/*text-align: center;*/
 }
-.question {
-	background-color: pink;
-
-}
 
 .time {
-	color: #383A3D;
+	color: #CCDFCB;
 	text-align: center;
+	font-family: 'Oswald', sans-serif;
 }
 .year {
-	background-color: #306469;
+	background-color: #056571
+;
 	color: white;
 	text-align: center;
 	width: 100%;
+	font-family: 'Oswald', sans-serif;
 }
 
 .year:hover{
-	background-color: #204346;
+	background-color: #81B29A;
 	color: white;
 }
 .circle {
   width: 7%;
-  background-color: #A08260;
+  background-color: white;
   margin: 3px 3px 3px 3px;
-
+  font-family: 'Oswald', sans-serif;
 }
 
 .icons {
@@ -51,36 +46,36 @@
 	text-align: center;
 
 }
-.color {
-	background-color: green;
-}
 
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100% ;
   position: relative;
-  margin: auto;
+  margin-top: 5px;
+  margin-right: 5px;
 }
 
 
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  color:  #CCDFCB;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
   width: 100%;
   text-align: center;
+  font-family: 'Oswald', sans-serif;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: white;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
+  font-family: 'Oswald', sans-serif;
 }
 
 /* The dots/bullets/indicators */
@@ -88,10 +83,11 @@
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: #056571;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.1s ease;
+  font-family: 'Oswald', sans-serif;
 }
 
 .active {
@@ -120,3 +116,22 @@
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
+
+.outofeleven {
+  padding-left: 7%;
+
+}
+#have {
+	color:  #FF6A5C;
+}
+#lost {
+	color: #FF9B42;
+}
+#other {
+	color: #81B29A;
+}
+#names {
+	text-align: center;
+
+}
+
